--- a/src/makefile.corpus
+++ b/src/makefile.corpus
@@ -111,5 +111,9 @@ $(DP)/task1_$(CY)_corpus_2010.xml.gz: generate_corpus.py $(DP)/QPosts$F $(DP)/Co
 $(DP)/task2_$(CY)_data.xml.gz: extract_formulas_task2.py
 	python3 extract_formulas_task2.py --output_folder $(DP)/
 
-corpus: $(DP)/task1_$(CY)_corpus_2010.xml.gz # $(DP)/task2_$(CY)_data.xml.gz
+corpus-task1: $(DP)/task1_$(CY)_corpus_2010.xml.gz
+
+corpus-task2: $(DP)/task2_$(CY)_data.xml.gz
+
+corpus: corpus-task1 # corpus-task2
 
