--- a/src/makefile.query
+++ b/src/makefile.query
@@ -19,16 +19,13 @@ $(DP)/judged-query-names.txt: $(DO)/qrel_*
 	cat $(DO)/qrel_* | awk '{print $$1}' | sort -u > $(DP)/judged-query-names.txt
 
 # ------------------ TASK 1 ------------------
-$(DP)/queries-task1$S-all.txt: $(DP)/topics-task1$S-2020.xml $(DP)/topics-task1$S-2021.xml $(DP)/topics-task1$S-2022.xml $(MS)/mstrip.exe $(DP)/judged-query-names.txt
-	cat $(DP)/topics-task1$S-*.xml \
+$(DR)/trec-task1$S-all.tsv: $(DP)/topics-task1$S-2020.xml $(DP)/topics-task1$S-2021.xml $(DP)/topics-task1$S-2022.xml \
+   $(MS)/mstrip.exe $(DP)/judged-query-names.txt $(DI)/task1_$(IY)_L$(loc).mindex.meta $(MS) $(MS)/msearch.exe $(MS)/mtokenize.exe
+	time cat $(DP)/topics-task1$S-*.xml \
 	  | python3 $(MT)/mathtuples/convert.py --context \
 	  | sed "/<Tags>/s/,/, /g" \
 	  | $(MS)/mstrip.exe -q \
 	  | awk -F';' 'FNR==NR{a[$$1];next} $$1 in a' $(DP)/judged-query-names.txt - \
-	  > $(DP)/queries-task1$S-all.txt
-
-$(DR)/trec-task1$S-all.tsv: $(DP)/queries-task1$S-all.txt $(DI)/task1_$(IY)_L$(loc).mindex.meta $(MS) $(MS)/msearch.exe $(MS)/mtokenize.exe
-	time cat $(DP)/queries-task1$S-all.txt \
 	  | $(MS)/mtokenize.exe -q -M -T keywords.txt -S stopwords.txt \
 	  | $(MS)/msearch.exe -k1000 -M -a0.$(alpha) $(DI)/task1_$(IY)_L$(loc).mindex \
 	  | awk 'BEGIN{OFS="\t"} {split($$2,a,"_"); $$2=a[3]; print $$0"\tL$(loc)_a0$(alpha)"}' \
