--- a/src/makefile.index
+++ b/src/makefile.index
@@ -27,6 +27,7 @@ $(DP)/task1_$(CY)_L$(loc)_2010$X:  $(DP)/task1_$(CY)_corpus_2010$X $(MT)/mathtup
 $(DI)/task1_$(IY)_L$(loc).mindex: $(MS)/minvert.exe $(MS)/mtokenize.exe $(DP)/task1_$(CY)_L$(loc)_2010$X
 #utf8_handler/tokenizer.py
 	gunzip -c $(DP)/task1_$(CY)_L$(loc)_*$X \
+	  | unidecode \
 	  | $(MS)/mtokenize.exe -M \
 	  | $(MS)/minvert.exe > $(DI)/task1_$(IY)_L$(loc).mindex
 	
