--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,7 @@
 [submodule "trec_eval"]
 	path = trec_eval
 	url = https://github.com/usnistgov/trec_eval
+	ignore = dirty
 [submodule "stopwords"]
 	path = stopwords
 	url = https://github.com/igorbrigadir/stopwords
