renamed unicode2ascii.py file

--- a/src/makefile.index
+++ b/src/makefile.index
@@ -24,9 +24,9 @@ $(DP)/task1_$(CY)_L$(loc)_2010$X:  $(DP)/task1_$(CY)_corpus_2010$X $(MT)/mathtup
 	    | gzip -c > $(DP)/task1_$(CY)_L$(loc)_$$y$X ; \
 	  done 
 
-$(DI)/task1_$(IY)_L$(loc).mindex: $(MS)/minvert.exe $(MS)/mtokenize.exe $(DP)/task1_$(CY)_L$(loc)_2010$X  unicode2asii.py
+$(DI)/task1_$(IY)_L$(loc).mindex: $(MS)/minvert.exe $(MS)/mtokenize.exe $(DP)/task1_$(CY)_L$(loc)_2010$X unicode2ascii.py
 	gunzip -c $(DP)/task1_$(CY)_L$(loc)_*$X \
-	  | python3 unicode2asii.py -c \
+	  | python3 unicode2ascii.py -c \
 	  | $(MS)/mtokenize.exe -M \
 	  | $(MS)/minvert.exe > $(DI)/task1_$(IY)_L$(loc).mindex
 	
@@ -47,10 +47,10 @@ $(DP)/task2_$(IY)_L$(loc)$X: $(DP)/task2_$(CY)_data$X $(MT)/mathtuples/convert.p
 	  | python3 $(MT)/mathtuples/convert.py --context 2> _task2-convert-errors.tmp \
 	  | gzip -c > $(DP)/task2_$(IY)_L$(loc)$X
 
-$(DI)/task2_$(IY)_latex_L$(loc).mindex: $(MS)/minvert.exe $(DP)/task2_$(CY)_L$(loc)$X latex_filter_stopwords.py $(DO)/latex_representation_v3 unicode2asii.py
+$(DI)/task2_$(IY)_latex_L$(loc).mindex: $(MS)/minvert.exe $(DP)/task2_$(CY)_L$(loc)$X latex_filter_stopwords.py $(DO)/latex_representation_v3 unicode2ascii.py
 	gunzip -c $(DP)/task2_$(CY)_L$(loc)$X \
 	  | python3 latex_filter_stopwords.py -tsv $(DO)/latex_representation_v3/ \
-	  | python3 unicode2asii.py -c \
+	  | python3 unicode2ascii.py -c \
 	  | $(MS)/minvert.exe > $(DI)/task2_$(IY)_latex_L$(loc).mindex
 
 $(DI)/task2_$(IY)_latex_L$(loc).mindex.meta: $(DI)/task2_$(IY)_latex_L$(loc).mindex $(MS)/mencode.exe
