--- a/src/makefile.query
+++ b/src/makefile.query
@@ -44,7 +44,7 @@ stopwords-mathstem.txt: stopwords.txt keywords.txt unicode2ascii.py
 topics: $(DP)/topics-task1$S-2020.txt $(DP)/topics-task1$S-2021.txt $(DP)/topics-task1$S-2022.txt \
 	$(DP)/topics-task2$S-2020.txt $(DP)/topics-task2$S-2021.txt $(DP)/topics-task2$S-2022.txt
 
-$(DP)/topics-task1$S-2020.txt: $(DO)/Formula_topics_latex_V2.0.tsv $(DO)/Formula_topics_slt_V2.0.tsv $(DO)/Topics_V2.0.xml tasks.awk \
+$(DP)/topics-task1$S-2020.txt $(DP)/topics-task2$S-2020.txt: $(DO)/Formula_topics_latex_V2.0.tsv $(DO)/Formula_topics_slt_V2.0.tsv $(DO)/Topics_V2.0.xml tasks.awk \
 	task2.awk $(DO)/Topics_V1.1.xml
 	cat $(DO)/Formula_topics_latex_V2.0.tsv <(echo "\n") $(DO)/Formula_topics_slt_V2.0.tsv $(DO)/Topics_V2.0.xml \
 		| tr -d "\r" | awk -f tasks.awk \
@@ -52,11 +52,12 @@ $(DP)/topics-task1$S-2020.txt: $(DO)/Formula_topics_latex_V2.0.tsv $(DO)/Formula
 		| sed "s/<[^>]*>/ /g;s/&[^;]*;/ /g;s/  */ /g" \
 		> $(DP)/topics-task1$S-2020.txt
 	cat $(DO)/Topics_V1.1.xml | awk -f task2.awk \
+		| python3 latex_filter_stopwords.py -tsv inline \
 		| python3 $(MT)/mathtuples/convert.py --context \
 		> $(DP)/topics-task2$S-2020.txt
 	rm forms
 
-$(DP)/topics-task1$S-2021.txt: $(DO)/Topics_2021_Formulas_Latex_V1.1.tsv $(DO)/Topics_2021_Formulas_SLT_V1.1.tsv $(DO)/Topics_Task1_2021_V1.1.xml tasks.awk \
+$(DP)/topics-task1$S-2021.txt $(DP)/topics-task2$S-2021.txt: $(DO)/Topics_2021_Formulas_Latex_V1.1.tsv $(DO)/Topics_2021_Formulas_SLT_V1.1.tsv $(DO)/Topics_Task1_2021_V1.1.xml tasks.awk \
 	$(DO)/Topics_Task2_2021_V1.1.xml task2.awk
 	cat $(DO)/Topics_2021_Formulas_Latex_V1.1.tsv $(DO)/Topics_2021_Formulas_SLT_V1.1.tsv $(DO)/Topics_Task1_2021_V1.1.xml \
 		| tr -d "\r" | awk -f tasks.awk \
@@ -64,11 +65,12 @@ $(DP)/topics-task1$S-2021.txt: $(DO)/Topics_2021_Formulas_Latex_V1.1.tsv $(DO)/T
 		| sed "s/<[^>]*>/ /g;s/&[^;]*;/ /g;s/  */ /g" \
 		> $(DP)/topics-task1$S-2021.txt
 	cat $(DO)/Topics_Task2_2021_V1.1.xml | awk -f task2.awk \
+		| python3 latex_filter_stopwords.py -tsv inline \
 		| python3 $(MT)/mathtuples/convert.py --context \
 		> $(DP)/topics-task2$S-2021.txt
 	rm forms
 
-$(DP)/topics-task1$S-2022.txt: $(DO)/Topics_Formulas_Latex.V0.1.tsv $(DO)/Topics_Formulas_SLT.V0.1.tsv $(DO)/Topics_Task1_2022_V0.1.xml tasks.awk \
+$(DP)/topics-task1$S-2022.txt $(DP)/topics-task2$S-2022.txt: $(DO)/Topics_Formulas_Latex.V0.1.tsv $(DO)/Topics_Formulas_SLT.V0.1.tsv $(DO)/Topics_Task1_2022_V0.1.xml tasks.awk \
 	$(DO)/Topics_Task2_2022_V0.1.xml task2.awk
 	cat $(DO)/Topics_Formulas_Latex.V0.1.tsv $(DO)/Topics_Formulas_SLT.V0.1.tsv $(DO)/Topics_Task1_2022_V0.1.xml \
 		| tr -d "\r" | awk -f tasks.awk \
@@ -76,15 +78,10 @@ $(DP)/topics-task1$S-2022.txt: $(DO)/Topics_Formulas_Latex.V0.1.tsv $(DO)/Topics
 		| sed "s/<[^>]*>/ /g;s/&[^;]*;/ /g;s/  */ /g" \
 		> $(DP)/topics-task1$S-2022.txt
 	cat $(DO)/Topics_Task2_2022_V0.1.xml | awk -f task2.awk \
+		| python3 latex_filter_stopwords.py -tsv inline \
 		| python3 $(MT)/mathtuples/convert.py --context \
 		> $(DP)/topics-task2$S-2022.txt
 	rm forms
-
-$(DP)/topics-task2$S-2020.txt: $(DP)/topics-task1$S-2020.txt
-
-$(DP)/topics-task2$S-2021.txt: $(DP)/topics-task1$S-2021.txt
-
-$(DP)/topics-task2$S-2022.txt: $(DP)/topics-task1$S-2022.txt
 
 $(DP)/judged-query-names.txt: $(DO)/qrel_*
 	cat $(DO)/qrel_* | awk '{print $$1}' | sort -u > $(DP)/judged-query-names.txt
@@ -109,7 +106,6 @@ $(DR)/trec-task2$S-all-latex_L$(loc)_a0$(alpha2).tsv: $(DP)/topics-task2$S-2020.
    $(DI)/task2_$(IY)_latex_L$(loc).mindex.meta latex_filter_stopwords.py \
    $(DP)/stopwords.txt $(DP)/judged-query-names.txt $(MS)/mtokenize.exe $(MS)/msearch.exe unicode2ascii.py
 	time cat $(DP)/topics-task2$S-*.txt \
-		| python3 latex_filter_stopwords.py -tsv inline \
 		| awk -F';' 'FNR==NR{a[$$1];next} $$1 in a' $(DP)/judged-query-names.txt - \
 		| python3 unicode2ascii.py -c \
 		| $(MS)/mtokenize.exe -q -M -S $(DP)/stopwords.txt \
