--- a/src/makefile.index
+++ b/src/makefile.index
@@ -15,7 +15,7 @@ X = .xml.gz
 # ------------------ INDEX ------------------
 
 # --------- Task 1 ------------
-$(DP)/task1_$(CY)_L$(loc)_2010$X:  $(DP)/task1_$(CY)_corpus_2010$X $(MT)/mathtuples/convert.py # $(MS)/mstrip.exe
+$(DP)/task1_$(CY)_L$(loc)_2010$X: $(DP)/task1_$(CY)_corpus_2010$X $(MT)/mathtuples/convert.py $(MS)/mstrip.exe
 	for y in {2010..2018}; do \
 	  echo $$y ; \
 	  gunzip -c $(DP)/task1_$(CY)_corpus_$$y$X \
@@ -58,6 +58,6 @@ $(DI)/task2_$(IY)_latex_L$(loc).mindex.meta: $(DI)/task2_$(IY)_latex_L$(loc).min
 	
 index-task2: $(DI)/task2_$(IY)_latex_L$(loc).mindex.meta
 
-index: index-task1 # index-task2
+index: index-task1 index-task2
 
 
