--- a/src/makefile.base
+++ b/src/makefile.base
@@ -13,6 +13,9 @@ MS = ../mtextsearch
 TE = ../trec_eval
 SW = ../stopwords/en
 
+ifneq ($(origin LANG),undefined)
+  $(error ENV LANG - Internationalization breaks corpus generation)
+endif
 
 .PRECIOUS: $(MS)/%.exe
 
