--- a/src/makefile.index
+++ b/src/makefile.index
@@ -28,16 +28,16 @@ $(DP)/task1_$(CY)_L$(loc)_2010$X: $(DP)/task1_$(CY)_corpus_2010$X $(MT)/mathtupl
 	  done 
 
 $(DI)/task1_$(IY)_L$(loc).mindex: $(MS)/minvert.exe $(MS)/mtokenize.exe $(DP)/task1_$(CY)_L$(loc)_2010$X unicode2ascii.py | $(DI)
-	gunzip -c $(DP)/task1_$(CY)_L$(loc)_*$X \
+	time gunzip -c $(DP)/task1_$(CY)_L$(loc)_*$X \
 	  | python3 unicode2ascii.py -c \
 	  | $(MS)/mtokenize.exe -M \
 	  | $(MS)/minvert.exe > $(DI)/task1_$(IY)_L$(loc).mindex
 
 $(DI)/task1_$(IY)_L$(loc).mindex.meta: $(DI)/task1_$(IY)_L$(loc).mindex $(MS)/mencode.exe
-	$(MS)/mencode.exe $(DI)/task1_$(IY)_L$(loc).mindex
+	time $(MS)/mencode.exe $(DI)/task1_$(IY)_L$(loc).mindex
 
 $(DP)/dictionary-gt20-$(IY)-terms.tsv:  $(MS)/msearch.exe $(DI)/task1_$(IY)_L$(loc).mindex.meta | $(DP)
-	$(MS)/msearch.exe -dd $(DI)/task1_$(IY)_L$(loc).mindex \
+	time $(MS)/msearch.exe -dd $(DI)/task1_$(IY)_L$(loc).mindex \
 	  | grep "^[0-9][0-9]"  | grep -v "^1[0-9][^0-9]" | grep -v "^20[^0-9]" \
 	  > $(DP)/dictionary-gt20-$(IY)-terms.tsv
 
@@ -50,13 +50,13 @@ $(DP)/task2_$(IY)_L$(loc)$X: $(DP)/task2_$(CY)_data$X $(MT)/mathtuples/convert.p
 	  | gzip -c > $(DP)/task2_$(IY)_L$(loc)$X
 
 $(DI)/task2_$(IY)_latex_L$(loc).mindex: $(MS)/minvert.exe $(DP)/task2_$(CY)_L$(loc)$X latex_filter_stopwords.py $(DO)/latex_representation_v3 unicode2ascii.py | $(DI)
-	gunzip -c $(DP)/task2_$(CY)_L$(loc)$X \
+	time gunzip -c $(DP)/task2_$(CY)_L$(loc)$X \
 	  | python3 latex_filter_stopwords.py -tsv $(DO)/latex_representation_v3/ \
 	  | python3 unicode2ascii.py -c \
 	  | $(MS)/minvert.exe > $(DI)/task2_$(IY)_latex_L$(loc).mindex
 
 $(DI)/task2_$(IY)_latex_L$(loc).mindex.meta: $(DI)/task2_$(IY)_latex_L$(loc).mindex $(MS)/mencode.exe
-	$(MS)/mencode.exe $(DI)/task2_$(IY)_latex_L$(loc).mindex
+	time $(MS)/mencode.exe $(DI)/task2_$(IY)_latex_L$(loc).mindex
 	
 index-task2: $(DI)/task2_$(IY)_latex_L$(loc).mindex.meta
 
