--- a/src/makefile.index
+++ b/src/makefile.index
@@ -30,6 +30,7 @@ $(DP)/task1_$(CY)_L$(loc)_2010$X: $(DP)/task1_$(CY)_corpus_2010$X $(MT)/mathtupl
 
 $(DI)/task1_$(IY)_L$(loc).mindex: $(MS)/minvert.exe $(MS)/mtokenize.exe $(DP)/task1_$(CY)_L$(loc)_2010$X unicode2ascii.py | $(DI)
 	time gunzip -c $(DP)/task1_$(CY)_L$(loc)_*$X \
+	  | sed 's/#!T!#//;s/#!Q!#//;s/#!A!#//;s/#!X!#//' \
 	  | $(MS)/mtokenize.exe -M \
 	  | $(MS)/minvert.exe > $(DI)/task1_$(IY)_L$(loc).mindex
 
